--- a/src/css/ForgotPassword.css
+++ b/src/css/ForgotPassword.css
@@ -1,33 +1,32 @@
-.login-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-image: url('../assets/bg.jpg');
-  background-size: cover;
-  background-position: center;
-}
+.forgot-password-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-image: url('../assets/bg.jpg');
+    background-size: cover;
+    background-position: center;
+  }
   
-  .login-form {
+  .forgot-password-form {
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 5px;
     background-color: white;
-    width: 400px;
+    width: 300px;
     text-align: center;
   }
 
-  .login-form img{
+  .forgot-password-form img{
     height: 100px;
     margin-bottom: 20px;
   }
   
-  .login-form h2 {
+  .forgot-password-form h2 {
     margin: 0 0 20px;
   }
   
   .input-group {
-    margin-right: 22px;
     margin-bottom: 15px;
     text-align: left;
   }
@@ -41,7 +40,6 @@
   input {
     width: 100%;
     padding: 10px;
-    margin-right: 50px;
     border: 1px solid #ccc;
     border-radius: 3px;
     font-size: 16px;
@@ -55,7 +53,6 @@
     padding: 10px;
     font-size: 16px;
     border-radius: 3px;
-    margin-bottom: 20px;
     cursor: pointer;
     transition: background-color 0.2s;
   }
