--- a/src/css/ChangePassword.css
+++ b/src/css/ChangePassword.css
@@ -1,4 +1,4 @@
-.forgot-password-container {
+.change-password-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,7 +8,7 @@
     background-position: center;
   }
   
-  .forgot-password-form {
+  .change-password-form {
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 5px;
@@ -16,26 +16,26 @@
     width: 300px;
     text-align: center;
   }
-
-  .forgot-password-company-info {
+  
+  .change-password-company-info {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 20px;
   }
   
-  .forgot-password-company-info img {
+  .change-password-company-info img {
     height: 70px ;
     margin-right: 10px;
   }
   
-  .forgot-password-company-info p {
+  .change-password-company-info p {
     font-size: 24px;
     font-weight: bold;
     margin: 0;
   }
-  
-  .forgot-password-form h2 {
+
+  .change-password-form h2 {
     margin: 0 0 20px;
   }
   
@@ -73,4 +73,3 @@
   button:hover {
     background-color: #0056b3;
   }
-  
