--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -7,60 +7,72 @@
   background-size: cover;
   background-position: center;
 }
-  
-  .login-form {
-    border: 1px solid #ccc;
-    padding: 20px;
-    border-radius: 5px;
-    background-color: white;
-    width: 400px;
-    text-align: center;
-  }
 
-  .login-form img{
-    height: 100px;
-    margin-bottom: 20px;
-  }
-  
-  .login-form h2 {
-    margin: 0 0 20px;
-  }
-  
-  .input-group {
-    margin-right: 22px;
-    margin-bottom: 15px;
-    text-align: left;
-  }
-  
-  label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 5px;
-  }
-  
-  input {
-    width: 100%;
-    padding: 10px;
-    margin-right: 50px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 16px;
-  }
-  
-  button {
-    width: 100%;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px;
-    font-size: 16px;
-    border-radius: 3px;
-    margin-bottom: 20px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
+.login-form {
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: white;
+  width: 400px;
+  text-align: center;
+}
+
+.login-company-info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.login-company-info img {
+  height: 70px ;
+  margin-right: 10px;
+}
+
+.login-company-info p {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.login-form h2 {
+  margin: 0 0 20px;
+}
+
+.input-group {
+  margin-right: 22px;
+  margin-bottom: 15px;
+  text-align: left;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  margin-right: 50px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  font-size: 16px;
+}
+
+button {
+  width: 100%;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  font-size: 16px;
+  border-radius: 3px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
