--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -43,6 +43,10 @@
   .sidebar-links li {
     padding: 10px;
   }
+
+  .sidebar-links li:hover {
+    background-color: #555454;
+  }
   
   .sidebar-links a {
     color: #fff;
@@ -137,3 +141,11 @@
   .dropdown-menu li:hover {
     background-color: #f5f5f5;
   }
+
+  .file-upload {
+    /* padding: 20px;  */
+    margin: 10px; 
+    width: 20%;
+    float: left;
+    margin-right: 10px; /* Adjust the margin as needed */
+}
