--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -1,151 +1,165 @@
 .dashboard-container {
-    display: flex;
-    min-height: 100vh;
-  }
-  
-  .sidebar {
-    width: 250px;
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-  }
-  
-  .company-info {
-    display: flex;
-    align-items: center;
-  }
-  
-  .company-logo {
-    flex: 1;
-    margin-right: 10px;
-  }
-  
-  .company-logo img {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .company-name {
-    flex: 3;
-  }
-  
-  .company-name p {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 0;
-  }
-  
-  .sidebar-links {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .sidebar-links li {
-    padding: 10px;
-  }
+  display: flex;
+  min-height: 100vh;
+  overflow: hidden;
+}
 
-  .sidebar-links li:hover {
-    background-color: #555454;
-  }
-  
-  .sidebar-links a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  .content {
-    flex: 1;
-  }
-  
-  .content h1 {
-    font-size: 24px;
-    margin-bottom: 20px;
-  }
-  
-  .dashboard-header {
-    display: flex;
-    justify-content: flex-end;
-    background-color: #fff;    
-    align-items: center;
-    padding: 10px;
-    border-bottom: 1px solid #ccc;
-  }
-  
-  .profile {
-    position: relative;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  
-  .profile img {
-    border-radius: 50%;
-    overflow: hidden;
-    width: 35px; 
-    height: 35px;
-    object-fit: cover;
-  }
+.sidebar {
+  width: 250px;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  transition: transform 0.3s;
+  animation-duration: 500ms;
+}
 
-  .table-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 1px solid #ccc;
-    padding: 20px; 
-    margin: 10px; 
-  }
-  
-  table {
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  table, th, td {
-    border: 1px solid #ddd; 
-  }
-  
-  th, td {
-    padding: 8px;
-    text-align: left;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-  }
+.company-info {
+  display: flex;
+  align-items: center;
+}
 
-  .dropdown-menu {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    z-index: 1;
-  }
-  
-  .dropdown-menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .dropdown-menu li {
-    padding: 10px;
-    text-align: center;
-    cursor: pointer;
-    white-space: nowrap;
-    transition: background-color 0.2s;
-  }
-  
-  .dropdown-menu li:hover {
-    background-color: #f5f5f5;
-  }
+.company-logo {
+  flex: 1;
+  margin-right: 10px;
+}
 
-  .file-upload {
-    /* padding: 20px;  */
-    margin: 10px; 
-    width: 20%;
-    float: left;
-    margin-right: 10px; /* Adjust the margin as needed */
+.company-logo img {
+  max-width: 100%;
+  height: auto;
+}
+
+.company-name {
+  flex: 3;
+}
+
+.company-name p {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.sidebar-links {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar-links li {
+  padding: 10px;
+}
+
+.sidebar-links li:hover {
+  background-color: #555454;
+}
+
+.sidebar-links a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.content {
+  flex: 1;
+}
+
+.content h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.header-icons {
+  display: flex;
+}
+
+.dashboard-header {
+  display: flex;
+  background-color: #fff;
+  align-items: center;
+  padding: 10px;
+  border-bottom: 1px solid #ccc;
+  justify-content: space-between; 
+}
+
+.hamburger-icon {
+  cursor: pointer;
+}
+
+.profile {
+  position: relative;
+  cursor: pointer;
+  display: flex; 
+  align-items: center;
+}
+
+.profile img {
+  border-radius: 50%;
+  overflow: hidden;
+  width: 35px;
+  height: 35px;
+  object-fit: cover;
+}
+
+.table-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin: 10px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table,
+th,
+td {
+  border: 1px solid #ddd;
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  z-index: 1;
+}
+
+.dropdown-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.dropdown-menu li {
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  transition: background-color 0.2s;
+}
+
+.dropdown-menu li:hover {
+  background-color: #f5f5f5;
+}
+
+.file-upload {
+  /* padding: 20px;  */
+  margin: 10px;
+  width: 20%;
+  float: left;
+  margin-right: 10px;
 }
