--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -97,6 +97,15 @@
   object-fit: cover;
 }
 
+.main-content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin: 10px;
+}
+
 .table-container {
   display: flex;
   justify-content: center;
@@ -130,7 +139,6 @@ th {
 .dropdown-menu {
   position: absolute;
   top: 100%;
-  right: 0;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border: 1px solid #ccc;
@@ -156,10 +164,66 @@ th {
   background-color: #f5f5f5;
 }
 
+.pro-dropdown-menu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  z-index: 1;
+}
+
+.pro-dropdown-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.pro-dropdown-menu li {
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  transition: background-color 0.2s;
+}
+
+.pro-dropdown-menu li:hover {
+  background-color: #f5f5f5;
+}
+
+.cat-dropdown-menu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  z-index: 1;
+}
+
+.cat-dropdown-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.cat-dropdown-menu li {
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+  white-space: nowrap;
+  transition: background-color 0.2s;
+}
+
+.cat-dropdown-menu li:hover {
+  background-color: #f5f5f5;
+}
+
 .file-upload {
-  /* padding: 20px;  */
-  margin: 10px;
   width: 20%;
   float: left;
-  margin-right: 10px;
+  /* margin-right: 10px; */
 }
