--- a/src/css/CreateUser.css
+++ b/src/css/CreateUser.css
@@ -8,11 +8,6 @@
   .left-side {
     flex: 1;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    background: url('../assets/signup-splitscreen.jpg') no-repeat center center;
-    background-size: cover;
-    background-color: #f2a7a7; /* Background color for the left side */
   }
 
   
@@ -25,12 +20,15 @@
     justify-content: center;
     align-items: center;
     padding: 20px;
-    background-color: #ffffff; /* Background color for the right side */
+    background-color: #f1f0f0;
   }
+  
   
   /* Form elements */
   .right-side h1 {
     font-size: 24px;
+    font-weight: bold;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin-bottom: 20px;
   }
   
@@ -41,6 +39,7 @@
   
   label {
     display: block;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
     margin-bottom: 5px;
   }
