UI for login, forgot password and change password modified

--- a/src/css/ForgotPassword.css
+++ b/src/css/ForgotPassword.css
@@ -1,21 +1,42 @@
 .forgot-password-container {
     display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
-    background-image: url('../assets/bg.jpg');
-    background-size: cover;
-    background-position: center;
   }
   
+  .forgot-password-left-side {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url('../assets/forgotpassword.jpg') no-repeat center center;
+    background-size: cover;
+    background-color: #fff; /* Background color for the left side */
+  }
+
+  p{
+    font-weight: bold ;
+  }
+
+  img {
+    margin-bottom: 30px;
+    margin-top: -30px;
+  }
+
   .forgot-password-form {
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 5px;
-    background-color: white;
+    background-color: #ffffff;
     width: 300px;
     text-align: center;
   }
+
+  .forgot-password-form img{
+    margin-top: 5px;
+    height: 100px;
+  }
+
+  /*  
 
   .forgot-password-company-info {
     display: flex;
@@ -42,7 +63,7 @@
   .input-group {
     margin-bottom: 15px;
     text-align: left;
-  }
+  } */
   
   label {
     display: block;
@@ -60,7 +81,7 @@
   
   button {
     width: 100%;
-    background-color: #007bff;
+    background-color: #000;
     color: #fff;
     border: none;
     padding: 10px;
@@ -68,9 +89,5 @@
     border-radius: 3px;
     cursor: pointer;
     transition: background-color 0.2s;
+    margin-top: 10px;
   }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
