--- a/src/css/ChangePassword.css
+++ b/src/css/ChangePassword.css
@@ -1,23 +1,58 @@
 .change-password-container {
     display: flex;
+    height: 100vh;
+  }
+
+  .change-password-left-side {
+    flex: 1;
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    background-image: url('../assets/bg.jpg');
+    background: url('../assets/bg.jpg') no-repeat center center;
     background-size: cover;
-    background-position: center;
+    background-color: #fff; /* Background color for the left side */
+  }
+
+  p{
+    font-weight: bold ;
+  }
+
+  img {
+    margin-bottom: 30px;
+    margin-top: -30px;
   }
   
   .change-password-form {
     border: 1px solid #ccc;
     padding: 20px;
     border-radius: 5px;
-    background-color: white;
+    background-color: #ffffff;
     width: 300px;
     text-align: center;
   }
+
+  .change-password-form img{
+    margin-top: 5px;
+    height: 100px;
+  }
+
+  .change-password-right-side {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: #ffffff; /* Background color for the right side */
+  }
   
-  .change-password-company-info {
+  /* Form elements */
+  .change-password-right-side h1 {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  
+  /* .change-password-company-info {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,7 +77,7 @@
   .input-group {
     margin-bottom: 15px;
     text-align: left;
-  }
+  } */
   
   label {
     display: block;
@@ -60,7 +95,7 @@
   
   button {
     width: 100%;
-    background-color: #007bff;
+    background-color: #000;
     color: #fff;
     border: none;
     padding: 10px;
