--- a/src/css/FileComponentsCss/FileOverviewCss.css
+++ b/src/css/FileComponentsCss/FileOverviewCss.css
@@ -1,14 +1,15 @@
 /* Add this to your CSS */
 .table-responsive {
-  overflow-x: auto; /* Enable horizontal scrolling */
+  overflow-x: auto;
   overflow-y: auto;
-  max-width: 100%; /* Make sure it doesn't exceed the container */
+  max-width: 100%;
   max-height: 100%;
 }
 
 .table {
-  white-space: nowrap; /* Prevent text wrapping in cells */
+  white-space: nowrap;
   height: 100%;
+  width: 100%;
 }
 
 .table th,
