--- a/src/css/CategoriesComponentsCss/CategoryPageCss.css
+++ b/src/css/CategoriesComponentsCss/CategoryPageCss.css
@@ -16,9 +16,26 @@
 }
 
 .child-2 {
-  margin: 10px;
+  /* margin: 10px;
   padding: 10px;
   width: 100%;
   height: 97%;
-  background-color: black;
+  background-color: black; */
+  .table-responsive {
+    overflow-x: auto; /* Enable horizontal scrolling */
+    overflow-y: auto;
+    max-width: 100%; /* Make sure it doesn't exceed the container */
+    max-height: 100%;
+  }
+  
+  .table {
+    white-space: nowrap; /* Prevent text wrapping in cells */
+    height: 100%;
+  }
+  
+  .table th,
+  .table td {
+    min-width: 100px; /* Set a minimum width for cells */
+  }
+  
 }
