--- a/src/css/UsersComponentsCss/UsersPageCss.css
+++ b/src/css/UsersComponentsCss/UsersPageCss.css
@@ -20,5 +20,27 @@
   padding: 10px;
   width: 100%;
   height: 97%;
-  background-color: black;
 }
+
+/* Add this to UsersPageCss.css */
+
+.delete-popup-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background for the blur effect */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+.delete-popup {
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
