--- a/src/css/UsersComponentsCss/UsersPageCss.css
+++ b/src/css/UsersComponentsCss/UsersPageCss.css
@@ -1,24 +1,23 @@
-.user-page-div {
-  flex: 0 0 100%;
-  background-color: #ccc; /* Set background color for the left sub-division */
-  display: flex; /* Use Flexbox to vertically align children */
-  flex-direction: column; /* Stack children vertically */
-  align-items: center; /* Center children horizontally */
-  height: 100%;
+.ant-table-row:nth-child(even) {
+  background-color: #f5f5f5; /* Zebra striping for better readability */
 }
 
-.child-1 {
-  margin: 10px;
-  padding: 10px;
-  width: 100%;
-  height: 10%;
-  background-color: #ffcccb;
+/* Adjust column widths as needed */
+.ant-table-thead th:nth-child(1),
+.ant-table-tbody td:nth-child(1) {
+  width: 50px; /* Example width */
 }
 
-.child-2 {
-  margin: 10px;
-  padding: 10px;
-  width: 100%;
-  height: 97%;
-  background-color: black;
+.custom-delete-button:hover {
+  background-color: #ff4d4f; /* Red hover effect */
+  color: #fff; /* White text color on hover */
 }
+
+.custom-delete-button:disabled {
+  background-color: #d9d9d9; /* Light gray background for disabled state */
+  color: #555; /* Darker text color for disabled state */
+  cursor: not-allowed; /* Change cursor for disabled state */
+}
+
+
+
