--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,14 @@
 .ant-popover {
   width: 200px;
 }
+
+.centered-loader-container {
+  position: relative;
+}
+
+.centered-loader {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
